Adição do carrossel

--- a/Site Institucional/Estático/PaginaTLOU1/tlou1.css
+++ b/Site Institucional/Estático/PaginaTLOU1/tlou1.css
@@ -435,23 +435,28 @@ body {
 }
 
 /* CARROSEL DE PERSONAGENS */
-/* .personagemContainer{
-    width: 100%;
-    height: 200vh;
-    overflow: hidden;
+.personagemContainer{
+    position: relative;
 }
 .personagens{
     display: flex;
-    width: 100%;
-    height: 200%;
+    position: relative;
+    width: 100vw;
+    margin-left: -6%;
+    overflow: hidden;
     flex-direction: column;
-} */
+}
 
-.ellie {
-    display: flex;
+.slide {
+    display: none;
+    position: relative;
     width: 100%;
     height: 100vh;
     flex-direction: column;
+}
+
+.slide.ativa {
+    display: flex;
 }
 
 .ellieGradiente {
@@ -459,7 +464,6 @@ body {
     position: absolute;
     width: 100%;
     z-index: -1;
-    margin-left: -5%;
     height: 100%;
     background: linear-gradient(180deg, #11141A 7.11%, rgba(17, 20, 26, 0) 100%);
     transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -470,9 +474,9 @@ body {
     position: absolute;
     z-index: -2;
     width: 100%;
-    margin-left: -5%;
-    background-position: 100% 80%;
+    background-position: 50% 40%;
     height: 100%;
+    background-size: cover;
     transform: matrix(-1, 0, 0, 1, 0, 0);
     background-image: url('./assets/the-last-of-us-part-1-remake-ellie-hd-wallpaper-uhdpaper.com-323@1@h.jpg');
 }
@@ -482,7 +486,6 @@ body {
     width: 50%;
     height: 15%;
     margin-top: 15%;
-    margin-left: -5.6%;
     background: linear-gradient(89.96deg, rgba(6, 31, 253, 0.1675) 18.83%, rgba(6, 208, 253, 0) 84.16%);
     justify-content: center;
     flex-direction: column;
@@ -494,8 +497,8 @@ body {
     color: #4883E3;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+    margin-left: 5%;
     font-size: 1vmax;
-    margin-left: 7%;
 }
 
 #ellieTexto {
@@ -504,7 +507,6 @@ body {
     font-family: "Press Gothic";
     font-weight: 100;
     font-size: 4vmax;
-    margin-left: 7%;
     margin-top: -0.5%;
     height: 60%;
 }
@@ -516,8 +518,8 @@ body {
     font-weight: 300;
     margin-top: 1%;
     font-size: 1.1vmax;
+    margin-left: 2%;
     width: 41%;
-    margin-left: -2%;
     flex-direction: column;
 }
 
@@ -540,22 +542,15 @@ body {
     display: flex;
     font-size: 3vmax;
     margin-right: 2%;
+    cursor: pointer;
 }
 
-
-.joel{
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    flex-direction: column;
-}
 
 .joelGradiente {
     display: flex;
     position: absolute;
     width: 100%;
     z-index: -1;
-    margin-left: -5%;
     height: 100%;
     background: linear-gradient(180deg, rgba(79, 70, 37, 0.26) 7.11%, rgba(26, 25, 17, 0) 100%);
     transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -566,8 +561,7 @@ body {
     position: absolute;
     z-index: -2;
     width: 100%;
-    margin-left: -5%;
-    background-position: 100% 10%;
+    background-position: 35% 10%;
     height: 100%;
     transform: matrix(-1, 0, 0, 1, 0, 0);
     background-image: url('./assets/5458dbb0ac20f48a59f8fc34cecf4e61.jpg');
@@ -578,7 +572,6 @@ body {
     width: 50%;
     height: 15%;
     margin-top: 15%;
-    margin-left: -5.5%;
     background: linear-gradient(89.96deg, rgba(210, 189, 75, 0.25) 18.83%, rgba(253, 199, 6, 0) 84.16%);
     justify-content: center;
     flex-direction: column;
@@ -613,7 +606,7 @@ body {
     margin-top: 1%;
     font-size: 1.1vmax;
     width: 41%;
-    margin-left: 1%;
+    margin-left: 6.5%;
     flex-direction: column;
 }
 
@@ -634,14 +627,9 @@ body {
 #personagemAnterior{
     display: flex;
     font-size: 3vmax;
-    margin-left: 2%;
+    margin-left: 7%;
     margin-right: auto;
     font-weight: 100;
     transform: rotate(-180deg);
-}
-#personagemProximo{
-    display: flex;
-    font-size: 3vmax;
-    margin-right: 2%;
-    font-weight: 100;
+    cursor: pointer;
 }
