--- a/Site Institucional/Estático/PaginaTLOU1/tlou1.css
+++ b/Site Institucional/Estático/PaginaTLOU1/tlou1.css
@@ -394,8 +394,9 @@ body {
 
 .criadora {
     display: flex;
-    height: 55vh;
+    margin-bottom: 5%;
     width: 100%;
+    height: 170.5vh;
     font-family: 'Space Grotesk';
     flex-direction: column;
     margin-top: 6%;
@@ -437,13 +438,14 @@ body {
 /* CARROSEL DE PERSONAGENS */
 .personagemContainer{
     position: relative;
+    width: 100%;
+    margin-top: 90%;
+
 }
 .personagens{
     display: flex;
-    position: relative;
-    width: 100vw;
-    margin-left: -6%;
-    overflow: hidden;
+    position: absolute;
+    width: 100%;
     flex-direction: column;
 }
 
@@ -497,18 +499,19 @@ body {
     color: #4883E3;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    margin-left: 5%;
+    margin-left: 8%;
     font-size: 1vmax;
+  
 }
 
-#ellieTexto {
+#ellieTexto2 {
     display: flex;
     color: white;
     font-family: "Press Gothic";
     font-weight: 100;
     font-size: 4vmax;
-    margin-top: -0.5%;
     height: 60%;
+    margin-left: 8%;
 }
 
 .ellieDescricao {
@@ -518,7 +521,7 @@ body {
     font-weight: 300;
     margin-top: 1%;
     font-size: 1.1vmax;
-    margin-left: 2%;
+    margin-left: 4%;
     width: 41%;
     flex-direction: column;
 }
@@ -541,7 +544,8 @@ body {
 #personagemProximo{
     display: flex;
     font-size: 3vmax;
-    margin-right: 2%;
+    margin-right: 0%;
+    font-weight: 100;
     cursor: pointer;
 }
 
@@ -587,13 +591,12 @@ body {
     margin-left: 13%;
 }
 
-#joelTexto {
+#joelTexto2 {
     display: flex;
     color: white;
     font-family: "Press Gothic";
     font-size: 4vmax;
     font-weight: 100;
-    margin-top: -0.5%;
     margin-left: 13%;
     height: 60%;
 }
@@ -632,4 +635,50 @@ body {
     font-weight: 100;
     transform: rotate(-180deg);
     cursor: pointer;
+}
+
+
+/* VOCE SABIA */
+.vocesabia {
+    display: flex;
+    width: 100%;
+    height: 40%;
+    flex-direction: column;
+}
+
+#vocesabiaTitulo{
+    display: flex;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.25vmax;
+    line-height: 20px;
+    font-style: normal;
+    margin-top: 5%;
+}
+
+.textos{
+    display: flex;
+    background-color: red;
+    flex-direction: column;
+    width: 50%;
+}
+#vocesabiaTexto{
+    display: flex;
+    color: #706D6D;
+    font-size: 1.1vmax;
+    margin-top: 1%;
+    font-weight: 300;
+    line-height: 28px;
+    width: 100%;
+    font-family: 'Space Grotesk';
+}
+
+#vocesabiaTexto2{
+    display: flex;
+    color: #706D6D;
+    font-size: 1.1vmax;
+    font-weight: 300;
+    line-height: 28px;
+    width: 100%;
+    font-family: 'Space Grotesk';
 }
