--- a/Site Institucional/Estático/PaginaInicial/home.css
+++ b/Site Institucional/Estático/PaginaInicial/home.css
@@ -101,6 +101,7 @@ body {
     width: 100%;
     height: 100%;
     margin-right: 5%;
+    align-items: center;
 }
 
 #textonavbar {
@@ -143,7 +144,7 @@ body {
     display: flex;
     height: 30%;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 #homepagetexto {
@@ -157,7 +158,6 @@ body {
     height: 30%;
     flex-direction: column;
     justify-content: center;
-    justify-content: flex-end;
     box-sizing: border-box;
 }
 
@@ -180,9 +180,10 @@ body {
 .jogos {
     display: flex;
     height: 30%;
+    width: 20%;
+    background-color: red;
     justify-content: center;
     flex-direction: column;
-    justify-content: flex-end;
     box-sizing: border-box;
 }
 
@@ -193,6 +194,12 @@ body {
     align-items: center;
 }
 
+.listaJogos{
+    display: flex;
+    position: absolute;
+    background-color: purple;
+    margin-top: 5%;
+}
 #jogoslinha {
     display: flex;
     opacity: 0;
@@ -220,8 +227,59 @@ body {
     align-items: center;
 }
 
+/* Faça Login */
+.login {
+    display: flex;
+    height: 30%;
+    width: 7%;
+    justify-content: center;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #FDC706;
+    font-family: 'Space Grotesk', sans-serif;
+    cursor: pointer;
+}
+#logintexto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 300;
+}
+
+/* Cadastro */
+.cadastrar{
+    display: flex;
+    height: 30%;
+    width: 9%;
+    justify-content: center;
+    box-sizing: border-box;
+    font-family: 'Space Grotesk', sans-serif;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 1%;
+}
+
+#naoTem {
+    display: flex;
+    color: #FDC706;
+    font-size: 0.5vmax;
+    justify-content: center;
+    font-weight: 500;
+}
+
+#cadastrartexto{
+    display: flex;
+    color: white;
+    font-size: 0.8vmax;
+    font-weight: 700;
+    margin-top: -4%;
+    cursor: pointer;
+
+}
+
 #iconNavbar {
-    margin-left: -5%;
+    margin-left: -1%;
     width: 10%;
     align-items: center;
     font-size: 18px;
