Nova router validar, validação se o email ja existe e ajustes na API

--- a/site/public/Login/login.css
+++ b/site/public/Login/login.css
@@ -230,7 +230,7 @@ body {
     }
 }
 
-.msgErro{
+#msgErro{
     display: flex;
     font-family: 'MADE Tommy Soft', sans-serif;
     font-size: 0.8vmax;
