--- a/site/public/Noticias/noticia.css
+++ b/site/public/Noticias/noticia.css
@@ -18,8 +18,66 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
-* {
-    -webkit-font-smoothing: antialiased;
+.blurAutenticacao {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 330vh;
+    background: rgba(182, 182, 182, 0.41);
+    backdrop-filter: blur(15px);
+    flex-direction: column;
+}
+
+
+#blurTexto {
+    display: flex;
+    color: #FDC706;
+    position: fixed;
+    z-index: 2;
+    font-family: 'Montserrat', sans-serif;
+    justify-content: center;
+    width: 100%;
+    font-size: 2vmax;
+    margin-top: 20%;
+    font-weight: 700;
+
+}
+
+#blurCadeado {
+    display: flex;
+    color: #FDC706;
+    position: fixed;
+    z-index: 2;
+    justify-content: center;
+    width: 100%;
+    margin-top: 25%;
+    font-weight: 400;
+    font-size: 5vmax;
+}
+
+#blurCadastro {
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    position: fixed;
+    z-index: 2;
+    justify-content: center;
+    width: 100%;
+    height: 30%;
+    color: white;
+    font-weight: 500;
+    margin-top: 32%;
+    cursor: pointer;
+}
+
+#blurCadastroBotao {
+    display: flex;
+    background-color: #FDC706;
+    width: 10%;
+    height: 15%;
+    align-items: center;
+    justify-content: center;
+    font-size: 1vmax;
+    border-radius: 10px;
 }
 
 body {
@@ -314,7 +372,7 @@ body {
     opacity: 0.79;
 }
 
-#imagemNoticiaTopico{
+#imagemNoticiaTopico {
     display: flex;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -322,7 +380,7 @@ body {
     margin-top: 4%;
 }
 
-#imagemNoticiaTitulo{
+#imagemNoticiaTitulo {
     display: flex;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -381,7 +439,7 @@ body {
     opacity: 0.79;
 }
 
-#imagemNoticia2Topico{
+#imagemNoticia2Topico {
     display: flex;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -389,7 +447,7 @@ body {
     margin-top: 8%;
 }
 
-#imagemNoticia2Titulo{
+#imagemNoticia2Titulo {
     display: flex;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -424,7 +482,7 @@ body {
     opacity: 0.79;
 }
 
-#imagemNoticia3Topico{
+#imagemNoticia3Topico {
     display: flex;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -432,7 +490,7 @@ body {
     margin-top: 8%;
 }
 
-#imagemNoticia3Titulo{
+#imagemNoticia3Titulo {
     display: flex;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -446,7 +504,7 @@ body {
 
 /* NOTICIA SELECIONADA */
 
-#imagemNoticiaSelecionadaGradiente{
+#imagemNoticiaSelecionadaGradiente {
     display: flex;
     position: absolute;
     z-index: -1;
@@ -455,6 +513,7 @@ body {
     background: linear-gradient(171.66deg, rgba(252, 152, 2, 0.541) 22.24%, rgba(0, 0, 0, 0.219) 59.19%);
 
 }
+
 .noticiaSelecionada {
     display: flex;
     width: 100%;
@@ -551,6 +610,7 @@ body {
     position: absolute;
     width: 100%;
     margin-left: -5%;
+    z-index: -1;
     height: 8vh;
     background-color: #493B33;
     justify-content: center;
