--- a/site/public/PaginaTLOU1/tlou1headerfixa.css
+++ b/site/public/PaginaTLOU1/tlou1headerfixa.css
@@ -1,6 +1,6 @@
 /* Header Fixa */
 #headerinfinitaFundo {
-    display: flex;
+    display: none;
     position: fixed;
     z-index: 2;
     width: 100vw;
