--- a/site/public/Noticias/noticia.css
+++ b/site/public/Noticias/noticia.css
@@ -18,7 +18,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
-.blurAutenticacao {
+#blurAutenticacao {
     display: flex;
     position: absolute;
     width: 100%;
@@ -348,6 +348,7 @@ body {
     height: 90%;
     margin-top: 2%;
     flex-direction: column;
+    cursor: pointer;
 }
 
 #imagemNoticia {
@@ -405,6 +406,7 @@ body {
     width: 100%;
     height: 50%;
     flex-direction: column;
+    cursor: pointer;
 }
 
 .noticiaBaixo {
