--- a/site/public/PaginaTLOU1/tlou1.css
+++ b/site/public/PaginaTLOU1/tlou1.css
@@ -182,7 +182,25 @@ body {
     font-size: 4vmax;
 }
 
+#irCima{
+    display: none;
+    position: fixed;
+    z-index: 2;
+    width: 3%;
+    height: 6%;
+    top: 85%;
+    left: 94%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    background-color: #7A6E44;
+    cursor: pointer;
+}
 
+#irCimaIcon {
+    color: white;
+    font-size: 1.7vmax;
+}
 
 
 
