--- a/site/public/PaginaInicial/home.css
+++ b/site/public/PaginaInicial/home.css
@@ -47,6 +47,108 @@ body {
     background-image: url('./assets/8879118.webp');
 }
 
+/* Menu Flutuante Jogos */
+#menuflutuanteJogos {
+    display: none;
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    background-color: #FDC706;
+    left: 50.5%;
+    top: 8%;
+    border-radius: 6px;
+    flex-direction: column;
+}
+
+.menuItens {
+    display: flex;
+    color: white;
+    font-size: 1vmax;
+    font-weight: 500;
+    margin-top: 6%;
+    margin-left: 5%;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+.menuTLOU1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 33%;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    font-family: 'Space Grotesk', sans-serif;
+    border-bottom: 3px solid white;
+}
+
+#menuTLOU1Texto {
+    display: flex;
+    color: white;
+    font-size: 1vmax;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+.menuTLOU2{
+    display: flex;
+    width: 100%;
+    height: 33%;
+    align-items: center;
+    font-family: 'Space Grotesk', sans-serif;
+    border-bottom: 3px solid white;
+
+}
+
+#menuTLOU2Texto {
+    display: flex;
+    color: white;
+    font-size: 1vmax;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+.menuLinha {
+    display: flex;
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: 2%;
+    top: 35%;
+}
+
+
+.menuLinha2 {
+    display: flex;
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: 2%;
+    top: 70%;
+}
+
+.menuTLOULB{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 33%;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+#menuTLOULBTexto{
+    display: flex;
+    color: white;
+    font-size: 1vmax;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+
+
+
+
+
 .container {
     height: 100vh;
     width: 90vw;
