--- a/site/public/PaginaInicial/tlou1.css
+++ b/site/public/PaginaInicial/tlou1.css
@@ -49,14 +49,20 @@
 #trailer {
     display: flex;
     position: absolute;
-    left: 35%;
-    top: 37.5%;
+    left: 31%;
+    top: 35%;
     width: 10%;
     height: 10%;
     align-items: center;
     cursor: pointer;
 }
 
+@media (max-width: 1919px){
+    #trailer{
+        left: 35%;
+        top: 37.5%;
+    }
+}
 #playIcon {
     color: white;
     font-size: 2.5vmax;
