--- a/site/public/PaginaInicial/tlouhbo.css
+++ b/site/public/PaginaInicial/tlouhbo.css
@@ -109,9 +109,9 @@
 }
 
 @media (max-width: 1919px) {
-    #trailer {
+    #trailer3 {
         left: 32%;
-        top: 430.5%;
+        top: 426.5%;
     }
 }
 
