--- a/site/public/PaginaInicial/home.css
+++ b/site/public/PaginaInicial/home.css
@@ -50,7 +50,7 @@ body {
 /* Menu Flutuante Jogos */
 #menuflutuanteJogos {
     display: none;
-    position: absolute;
+    position: fixed;
     width: 14%;
     height: 15%;
     background-color: #FDC706;
@@ -60,8 +60,9 @@ body {
     flex-direction: column;
 }
 
-@media (max-width: 1919px){
-    #menuflutuanteJogos{
+
+@media (max-width: 1919px) {
+    #menuflutuanteJogos {
         width: 15%;
         height: 20%;
     }
@@ -87,6 +88,11 @@ body {
     border-top-left-radius: 8px;
     font-family: 'Space Grotesk', sans-serif;
     border-bottom: 3px solid white;
+    cursor: pointer;
+}
+
+.menuTLOU1:hover {
+    background-color: #f7b500;
 }
 
 #menuTLOU1Texto {
@@ -97,20 +103,24 @@ body {
     font-weight: 500;
 }
 
-@media (max-width: 1919px){
-    #menuTLOU1Texto{
+@media (max-width: 1919px) {
+    #menuTLOU1Texto {
         font-size: 1vmax;
     }
 }
 
-.menuTLOU2{
+.menuTLOU2 {
     display: flex;
     width: 100%;
     height: 33%;
     align-items: center;
     font-family: 'Space Grotesk', sans-serif;
     border-bottom: 3px solid white;
+    cursor: pointer;
+}
 
+.menuTLOU2:hover {
+    background-color: #f7b500;
 }
 
 #menuTLOU2Texto {
@@ -121,8 +131,8 @@ body {
     font-weight: 500;
 }
 
-@media (max-width: 1919px){
-    #menuTLOU2Texto{
+@media (max-width: 1919px) {
+    #menuTLOU2Texto {
         font-size: 1vmax;
     }
 }
@@ -146,7 +156,7 @@ body {
     top: 70%;
 }
 
-.menuTLOULB{
+.menuTLOULB {
     display: flex;
     align-items: center;
     width: 100%;
@@ -154,9 +164,14 @@ body {
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     font-family: 'Space Grotesk', sans-serif;
+    cursor: pointer;
 }
 
-#menuTLOULBTexto{
+.menuTLOULB:hover {
+    background-color: #f7b500;
+}
+
+#menuTLOULBTexto {
     display: flex;
     color: white;
     font-size: 0.9vmax;
@@ -164,8 +179,8 @@ body {
     font-weight: 500;
 }
 
-@media (max-width: 1919px){
-    #menuTLOULBTexto{
+@media (max-width: 1919px) {
+    #menuTLOULBTexto {
         font-size: 1vmax;
     }
 }
@@ -200,7 +215,7 @@ body {
     margin-left: 5%;
 }
 
-#textonavbarInfinito{
+#textonavbarInfinito {
     display: flex;
     align-items: center;
     width: 85%;
@@ -215,6 +230,7 @@ body {
     gap: 5%;
 
 }
+
 @media (max-width: 1919px) {
     #textonavbarInfinito {
         font-size: 1.2vmax;
@@ -328,7 +344,7 @@ body {
 /* JOGOS */
 .jogos {
     display: flex;
-    height: 30%;
+    height: 100%;
     justify-content: center;
     flex-direction: column;
     box-sizing: border-box;
@@ -368,12 +384,13 @@ body {
 }
 
 /* Faça Login */
-.logincadastro{
+.logincadastro {
     display: flex;
     width: 15%;
     height: 100%;
     align-items: center;
 }
+
 .login {
     display: none;
     height: 30%;
@@ -384,8 +401,9 @@ body {
     background-color: #FDC706;
     font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
-    
+
 }
+
 #logintexto {
     display: flex;
     justify-content: center;
@@ -395,7 +413,7 @@ body {
 }
 
 /* Cadastro */
-.cadastrar{
+.cadastrar {
     display: none;
     height: 30%;
     width: 60%;
@@ -415,7 +433,7 @@ body {
     font-weight: 500;
 }
 
-#cadastrartexto{
+#cadastrartexto {
     display: flex;
     color: white;
     font-size: 0.8vmax;
@@ -437,6 +455,7 @@ body {
     font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
 }
+
 #contatexto {
     display: flex;
     justify-content: center;
@@ -469,7 +488,7 @@ body {
     text-align: center;
 }
 
-#irCima{
+#irCima {
     display: none;
     position: fixed;
     z-index: 2;
