--- a/site/public/PaginaTLOU1/tlou1.css
+++ b/site/public/PaginaTLOU1/tlou1.css
@@ -52,95 +52,145 @@ body {
     align-items: center;
 }
 
-/* HOMEPAGE */
-.homepage {
-    display: flex;
-    height: 30%;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-#homepagetexto {
-    display: flex;
-    color: #ffffff;
-    cursor: pointer;
-}
-
-/*NOTICIAS*/
-.noticias {
-    display: flex;
-    height: 30%;
-    flex-direction: column;
-    justify-content: center;
-    justify-content: flex-end;
-    box-sizing: border-box;
-}
-
-#noticiastexto {
-    cursor: pointer;
-    color: white;
-}
-
-#noticiaslinha {
-    display: flex;
-    opacity: 0;
+/* Menu Flutuante Jogos */
+#menuflutuanteJogos {
+    display: none;
+    position: fixed;
+    width: 14%;
+    height: 15%;
     background-color: #FDC706;
-    width: 0%;
-    height: 10%;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-}
-
-/* JOGOS */
-.jogos {
-    display: flex;
-    height: 30%;
-    justify-content: center;
+    left: 50.5%;
+    top: 8%;
+    border-radius: 6px;
     flex-direction: column;
-    justify-content: flex-end;
-    box-sizing: border-box;
 }
 
-#jogostexto {
+
+@media (max-width: 1919px) {
+    #menuflutuanteJogos {
+        width: 15%;
+        height: 20%;
+    }
+}
+
+
+.menuItens {
     display: flex;
-    cursor: pointer;
     color: white;
+    font-size: 1vmax;
+    font-weight: 500;
+    margin-top: 6%;
+    margin-left: 5%;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+.menuTLOU1 {
+    display: flex;
     align-items: center;
-}
-
-#jogoslinha {
-    display: flex;
-    opacity: 0;
-    background-color: #FDC706;
-    width: 0%;
-    height: 10%;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-}
-
-/* Serie */
-.serie {
-    display: flex;
-    height: 30%;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: flex-end;
-    box-sizing: border-box;
-}
-
-#serietexto {
-    display: flex;
+    width: 100%;
+    height: 33%;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    font-family: 'Space Grotesk', sans-serif;
+    border-bottom: 3px solid white;
     cursor: pointer;
-    color: white;
-    align-items: center;
 }
 
-#iconNavbar {
-    margin-left: -5%;
-    width: 10%;
-    align-items: center;
-    font-size: 18px;
+.menuTLOU1:hover {
+    background-color: #f7b500;
 }
+
+#menuTLOU1Texto {
+    display: flex;
+    color: white;
+    font-size: 0.9vmax;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+@media (max-width: 1919px) {
+    #menuTLOU1Texto {
+        font-size: 1vmax;
+    }
+}
+
+.menuTLOU2 {
+    display: flex;
+    width: 100%;
+    height: 33%;
+    align-items: center;
+    font-family: 'Space Grotesk', sans-serif;
+    border-bottom: 3px solid white;
+    cursor: pointer;
+}
+
+.menuTLOU2:hover {
+    background-color: #f7b500;
+}
+
+#menuTLOU2Texto {
+    display: flex;
+    color: white;
+    font-size: 0.9vmax;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+@media (max-width: 1919px) {
+    #menuTLOU2Texto {
+        font-size: 1vmax;
+    }
+}
+
+.menuLinha {
+    display: flex;
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: 2%;
+    top: 35%;
+}
+
+
+.menuLinha2 {
+    display: flex;
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: 2%;
+    top: 70%;
+}
+
+.menuTLOULB {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 33%;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    font-family: 'Space Grotesk', sans-serif;
+    cursor: pointer;
+}
+
+.menuTLOULB:hover {
+    background-color: #f7b500;
+}
+
+#menuTLOULBTexto {
+    display: flex;
+    color: white;
+    font-size: 0.9vmax;
+    margin-left: 5%;
+    font-weight: 500;
+}
+
+@media (max-width: 1919px) {
+    #menuTLOULBTexto {
+        font-size: 1vmax;
+    }
+}
+
+
 
 /* TITULO */
 .tituloJogo {
@@ -182,7 +232,7 @@ body {
     font-size: 4vmax;
 }
 
-#irCima{
+#irCima {
     display: none;
     position: fixed;
     z-index: 2;
@@ -448,8 +498,8 @@ body {
     margin-top: 90%;
 }
 
-@media (max-height: 700px){
-    .personagemContainer{
+@media (max-height: 700px) {
+    .personagemContainer {
         margin-top: 85%;
     }
 }
