--- a/site/public/PaginaTLOU1/tlou1header.css
+++ b/site/public/PaginaTLOU1/tlou1header.css
@@ -33,7 +33,7 @@
 #textonavbar {
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 90%;
     height: 100%;
     justify-content: center;
     font-family: 'Space Grotesk', sans-serif;
@@ -47,4 +47,90 @@
 
 .a {
     margin-top: 20%;
+}
+
+/* HOMEPAGE */
+.homepage {
+    display: flex;
+    height: 30%;
+    flex-direction: column;
+}
+
+#homepagetexto {
+    display: flex;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+/*NOTICIAS*/
+.noticias {
+    display: flex;
+    height: 30%;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+#noticiastexto {
+    cursor: pointer;
+    color: white;
+}
+
+#noticiaslinha {
+    display: flex;
+    opacity: 0;
+    background-color: #FDC706;
+    width: 0%;
+    height: 10%;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+/* JOGOS */
+.jogos {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+#jogostexto {
+    display: flex;
+    cursor: pointer;
+    color: white;
+    align-items: center;
+}
+
+#jogoslinha {
+    display: flex;
+    opacity: 0;
+    background-color: #FDC706;
+    width: 0%;
+    height: 10%;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+/* Serie */
+.serie {
+    display: flex;
+    height: 30%;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+#serietexto {
+    display: flex;
+    cursor: pointer;
+    color: white;
+    align-items: center;
+}
+
+#iconNavbar {
+    margin-left: -5%;
+    width: 10%;
+    align-items: center;
+    font-size: 18px;
 }
